# Demo

./: .gitmodules  CMakeLists.txt
shaders/: demo.vert
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  GameApp.h  Window.h
src/core/input/: Event.h
src/core/platform/: window_system.cpp
src/core/utility/: log_system.cpp  log_system.h  macro.h
src/editor/: CMakeLists.txt
src/editor/source/: main.cpp
src/runtime/: CMakeLists.txt  engine.cpp  engine.h  runtime_context.cpp  runtime_context.h
src/runtime/core/: log_system.cpp  log_system.h
src/runtime/platform/: window_system.cpp  window_system.h
tools/: compile.bat
